// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bullet component should match snapshot 1`] = `
<div>
  <div
    class="css-1srap2r-Bullet"
  >
    bullet
  </div>
</div>
`;

exports[`Bullet component should match snapshot with defaults 1`] = `
<div>
  <div
    class="css-1cpe24t-Bullet"
  >
    bullet
  </div>
</div>
`;
